# hippo

./: .gitignore  ARCHITECTURE.md  CODE_OF_CONDUCT.md  COMPLETION_REPORT.md  COMPLETION_REPORT_P2.md  CONTRIBUTING.md  Dockerfile  LICENSE  NEXT_SESSION_INDEX.md  OPENSOURCE_CHECKLIST.md  OPENSOURCE_PREPARATION.md  README.md  README.md.bak  RELEASE_NOTES.md  SECURITY.md  api.py  audit.py  cli.py  config.py  dependencies.py  docker-compose.yml  downloader.py  gguf.py  llm-memory-budget.skill  local_router.py  metrics.py  middleware.py  model_manager.py  pyproject.toml  quantize.py  query_predictor.py  routes.py  ruff.toml  test_continuous_batch.py  test_hippo_batch_integration.py  tui_v2.py
.github/: PULL_REQUEST_TEMPLATE.md
cluster/: __init__.py  backend.py  discovery.py  gateway.py  rpc_shard.py  scheduler.py  transport.py  worker.py
config/: routes.json
docs/: BATCH_API_GUIDE.md  BATCH_INFERENCE.md  BENCHMARK.md  DISTRIBUTED_COMPARISON.md  DISTRIBUTED_DESIGN.md  EXO_ANALYSIS.md  M1_LLAMA_RPC_BENCHMARK.md  METRICS.md  PHASE1_DESIGN.md  dev-to-article.md  juejin-article.md
hippo/: __init__.py  api.py  audit.py  cli.py  config.py  continuous_batch.py  dependencies.py  downloader.py  gguf.py  metrics.py  middleware.py  model_manager.py  quantize.py  query_predictor.py  routes.py  tui.py  tui_backup.py  tui_v2.py
hippo_llm.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
memory/: SESSION_ARCHIVE_20260419_HIPPO_M1M2_CRASH_ANALYSIS.md  SESSION_ARCHIVE_20260419_HIPPO_M1M2_DUAL_MAC.md
pipeline/: PERFORMANCE.md  backend_llama.py  benchmark.py  cluster.py  config.py  distributed_model.py  hippo-api.conf.yaml  hippo.conf.yaml  hippo_api.py  hippo_cli.py  hippo_web.py  logits.py  loop_detector.py  model_ops.py  pipeline_layers.py  rank0.py  rank0_dflash.py  rank1.py  shard_loader.py  sharded_inference.py  start.sh  tcp_transport.py  test_crit_acceptance.py  test_dual_rank.py  test_e2e_single.py  test_memory_loading.py  test_pipeline.py  test_tcp_transport.py
routers/: __init__.py  batch.py  embeddings.py  inference.py  management.py  metrics.py  models.py  rerank.py  (+2 more)
(+53 files in other folders)
